--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,57 +1,53 @@
-name: generate animation
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
+name: Generate Snake
+
+# Controls when the action will run. This action runs every 6 hours.
 
 on:
-  # run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *"
-  
-  # allows to manually run the job at any time
+      # every 6 hours
+    - cron: "0 */6 * * *"
+
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-  
-  # run on every push on the master branch
-  push:
-    branches:
-      - master
 
+# The sequence of runs in this workflow:
 jobs:
-  generate:
-    permissions:
-      contents: write
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Check out the repository
-      - name: Check out the repository
-        uses: actions/checkout@v3
 
-      # Install dependencies including canvas
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      
-      - name: Install canvas dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev
-          npm install canvas
-          
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: cecepot 
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=#953553&color_dots=#FFF5EE,#F3CFC6,#FFB6C1,#E37383,#C21E56
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v2
 
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+    # Generates the snake  
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
+          github_user_name: cecepot
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
+          col_out_path: dist/ocean.gif?color_snake=#953553&color_dots=#FFF5EE,#F3CFC6,#FFB6C1,#E37383,#C21E56
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
+
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
